Virtuoso flickering fix

--- a/src/entities/Article/ui/ArticleItemBig/ArticleItemBig.module.css
+++ b/src/entities/Article/ui/ArticleItemBig/ArticleItemBig.module.css
@@ -27,9 +27,8 @@
 
 .imageContainer {
     width: 100%;
-    max-height: 200px;
+    height: 200px;
     object-fit: cover;
-
 }
 
 .bottomPart {
